force-app/main/default/objects/ValueStream__c/ValueStream__c.object-meta.xml
<CustomObject>
    <label>Value Stream</label>
    <nameField>
        <label>Value Stream Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Streams</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>