force-app/main/default/objects/ValueStream__c/fields/Atlan_Features_Used__c.field-meta.xml
<CustomField>
    <fullName>Atlan_Features_Used__c</fullName>
    <description>The Atlan features used in building out the Value Stream</description>
    <inlineHelpText>The Atlan features used in building out the Value Stream</inlineHelpText>
    <label>Atlan Features Used</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Atlan_Features</valueSetName>
    </valueSet>
</CustomField>