force-app/main/default/objects/ValueStream__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <description>The Value Stream category</description>
    <inlineHelpText>The Value Stream category</inlineHelpText>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Discovery</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>