force-app/main/default/objects/ValueStream__c/fields/Context_and_Action__c.field-meta.xml
<CustomField>
    <fullName>Context_and_Action__c</fullName>
    <description>Context needed to enable the value stream and actions taken as part of the value stream</description>
    <inlineHelpText>Context needed to enable the value stream and actions taken as part of the value stream</inlineHelpText>
    <label>Context &amp; Action</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quality of data</fullName>
            </value>
            <value>
                <fullName>Size of the table</fullName>
            </value>
            <value>
                <fullName>Link/location of data</fullName>
            </value>
            <value>
                <fullName>Last updated date of tables</fullName>
            </value>
            <value>
                <fullName>Owners of tables, dashboards</fullName>
            </value>
            <value>
                <fullName>Deprecation status of data</fullName>
            </value>
            <value>
                <fullName>Sensitive data</fullName>
            </value>
            <value>
                <fullName>Contractual data</fullName>
            </value>
            <value>
                <fullName>Meaning of different tables and columns</fullName>
            </value>
            <value>
                <fullName>KPI definition</fullName>
            </value>
            <value>
                <fullName>Meaning of different queries</fullName>
            </value>
            <value>
                <fullName>What query exists</fullName>
            </value>
            <value>
                <fullName>Downstream dashboards for tables</fullName>
            </value>
            <value>
                <fullName>Downstream tables</fullName>
            </value>
            <value>
                <fullName>Dependent tables for dashboards</fullName>
            </value>
            <value>
                <fullName>Upstream tables</fullName>
            </value>
            <value>
                <fullName>Logic on how tables are created</fullName>
            </value>
            <value>
                <fullName>How are columns and metrics calculated</fullName>
            </value>
            <value>
                <fullName>Popular tables</fullName>
            </value>
            <value>
                <fullName>What dashboards &amp; reports exists</fullName>
            </value>
            <value>
                <fullName>What tables exists</fullName>
            </value>
            <value>
                <fullName>People who need access to data</fullName>
            </value>
            <value>
                <fullName>Notifying different teams</fullName>
            </value>
            <value>
                <fullName>Share data</fullName>
            </value>
            <value>
                <fullName>Update deprecation status of table</fullName>
            </value>
            <value>
                <fullName>Document version history</fullName>
            </value>
            <value>
                <fullName>Create access policy</fullName>
            </value>
            <value>
                <fullName>Periodically review data to be deleted</fullName>
            </value>
            <value>
                <fullName>Document data science models</fullName>
            </value>
            <value>
                <fullName>Create pivot tables</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>