force-app/main/default/objects/ValueStream__c/fields/Data_Personas_Impacted__c.field-meta.xml
<CustomField>
    <fullName>Data_Personas_Impacted__c</fullName>
    <description>The data persona(s) associated with this Value Stream - those that are enabled, involved, etc.</description>
    <inlineHelpText>The data persona(s) associated with this Value Stream - those that are enabled, involved, etc.</inlineHelpText>
    <label>Data Personas Impacted</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Data_Persona</valueSetName>
    </valueSet>
</CustomField>