force-app/main/default/objects/ValueStream__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Description of the Value Stream</description>
    <inlineHelpText>Description of the Value Stream</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>