force-app/main/default/objects/ValueStream__c/fields/Jobs_to_be_Done__c.field-meta.xml
<CustomField>
    <fullName>Jobs_to_be_Done__c</fullName>
    <description>The core responsibilities and value-adding activities enabled by the value stream</description>
    <inlineHelpText>The core responsibilities and value-adding activities enabled by the value stream</inlineHelpText>
    <label>Jobs to be Done</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Building trust across stakeholders</fullName>
            </value>
            <value>
                <fullName>Enable business to produce insights faster</fullName>
            </value>
            <value>
                <fullName>Ensure the company is compliant</fullName>
            </value>
            <value>
                <fullName>Monitor &amp; improve the health of the business</fullName>
            </value>
            <value>
                <fullName>Optimising the cost spend on data stack</fullName>
            </value>
            <value>
                <fullName>Efficient onboarding of external consultants</fullName>
            </value>
            <value>
                <fullName>Efficient onboarding of new joiners</fullName>
            </value>
            <value>
                <fullName>Ensure the company is secure</fullName>
            </value>
            <value>
                <fullName>Maintain the health of the data stack</fullName>
            </value>
            <value>
                <fullName>Moving company&apos;s tech stack to modern scalable and efficient ones</fullName>
            </value>
            <value>
                <fullName>Enable data analyst with the most accurate data</fullName>
            </value>
            <value>
                <fullName>Minimising the legal/business risk</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>