force-app/main/default/objects/ValueStream__c/fields/Problem_Statements__c.field-meta.xml
<CustomField>
    <fullName>Problem_Statements__c</fullName>
    <description>Problem statements typically solved or improved through this Value Stream</description>
    <inlineHelpText>Problem statements typically solved or improved through this Value Stream</inlineHelpText>
    <label>Problem Statements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>DP1 - Improve data team productivity</fullName>
            </value>
            <value>
                <fullName>DP2 - Reduce dependencies on the data team/Improve business self-service</fullName>
            </value>
            <value>
                <fullName>DP3 - Enable faster onboarding</fullName>
            </value>
            <value>
                <fullName>DP4 - Improve data compliance and security</fullName>
            </value>
            <value>
                <fullName>DP5 - Optimize data stack cost &amp; resources</fullName>
            </value>
            <value>
                <fullName>Collaboration</fullName>
                <isActive>false</isActive>
                <label>Collaboration</label>
            </value>
            <value>
                <fullName>Data Quality</fullName>
                <isActive>false</isActive>
                <label>Data Quality</label>
            </value>
            <value>
                <fullName>Data Team Requests</fullName>
                <isActive>false</isActive>
                <label>Data Team Requests</label>
            </value>
            <value>
                <fullName>Data Visibility</fullName>
                <isActive>false</isActive>
                <label>Data Visibility</label>
            </value>
            <value>
                <fullName>Lineage</fullName>
                <isActive>false</isActive>
                <label>Lineage</label>
            </value>
            <value>
                <fullName>Single Source of Truth</fullName>
                <isActive>false</isActive>
                <label>Single Source of Truth</label>
            </value>
            <value>
                <fullName>Tribal Knowledge</fullName>
                <isActive>false</isActive>
                <label>Tribal Knowledge</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>